--- a/fortimanagerYTconfig.yaml
+++ b/fortimanagerYTconfig.yaml
@@ -2,17 +2,13 @@ manager:
   # Url de acesso a api do manager
   # Exemplo: 192.168.1.200:8080
   url: ""
-  # Usuário com permissões de escrita no 
-  # fortimanager e com acesso a api
+  # Usuário com permissões de escrita no fortimanager e com acesso a api
   usuario: ""
   senha: ""
   # Se o fortimanager usa ssl ou não
   ssl: True
-  # Pasta onde devem ser armazenados os
-  # arquivos de cache gerados pelo programa
-  pasta_cache: ""
-  # Pasta onde estão armazenados os templates
-  # de requisição a api
+  # Pasta onde estão armazenados os templates de requisição a api
+  # O caminho relativo só irá funcionar caso rode o programa na pasta atual
   pasta_templates: "requests/"
   # Adom que será alterado
   adom: ""
