--- a/fortimanagerYTconfig.yaml
+++ b/fortimanagerYTconfig.yaml
@@ -1,6 +1,6 @@
 manager:
   # Url de acesso a api do manager
-  # Exemplo: 192.168.1.200:8080
+  # Exemplo: https://192.168.1.200:8080
   url: ""
   # Usuário com permissões de escrita no fortimanager e com acesso a api
   usuario: ""
